restored fig checklist viz

--- a/notebooks/plots-doc-checklist.ipynb
+++ b/notebooks/plots-doc-checklist.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exception reporting mode: Verbose\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# magic command to update modules\n",
     "%load_ext autoreload\n",
@@ -22,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-22 12:26:19 - INFO - Creating global visualization for 1 checks\n",
-      "2025-07-22 12:26:19 - INFO - Creating plot for prompt: prompt.1...\n",
-      "2025-07-22 12:26:19 - INFO - Creating plot for prompt: prompt.2...\n"
+      "2025-07-22 16:33:13 - INFO - Creating global visualization for 1 checks\n",
+      "2025-07-22 16:33:13 - INFO - Creating plot for prompt: prompt.1...\n",
+      "2025-07-22 16:33:13 - INFO - Creating plot for prompt: prompt.2...\n"
      ]
     },
     {
@@ -117,7 +109,7 @@
          "showlegend": true,
          "type": "scatter",
          "x": {
-          "bdata": "OnTSSjlYx7/IAJn1c7zBvy7VLuRWb8K/IzQUQf1lwL+vAffqt7jFvw==",
+          "bdata": "CMnDjryyzL92OcviQSrBv3+QOUOyScO/BHFV7xVPyL/CRDRF41/Kvw==",
           "dtype": "f8"
          },
          "y": {
@@ -182,7 +174,7 @@
          "showlegend": true,
          "type": "scatter",
          "x": {
-          "bdata": "rsxwQ9XHxD/ALeMsYmnLP4xGWuXbDc8/o+0zcXtRyj8phJzAebfEPw==",
+          "bdata": "z7XLSwKpwz8ktiDVR43EP8UBl4Cs28E/UMoXKZzXwT8nLOdLBhbLPw==",
           "dtype": "f8"
          },
          "y": {
@@ -1032,110 +1024,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "item_id                 field                      prompt  \n",
-       "10.1038_embor.2009.217  missing_sections           prompt.1    0.750000\n",
-       "                                                   prompt.2    0.750000\n",
-       "                        sections_as_in_manuscript  prompt.1    1.000000\n",
-       "                                                   prompt.2    1.000000\n",
-       "                        sections_to_move           prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_remove         prompt.1    1.000000\n",
-       "                                                   prompt.2    1.000000\n",
-       "                        sections_to_rename         prompt.1    0.127395\n",
-       "                                                   prompt.2    0.000000\n",
-       "EMBOJ-2024-119734R      missing_sections           prompt.1    0.929524\n",
-       "                                                   prompt.2    0.628702\n",
-       "                        sections_as_in_manuscript  prompt.1    1.000000\n",
-       "                                                   prompt.2    1.000000\n",
-       "                        sections_to_move           prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_remove         prompt.1    1.000000\n",
-       "                                                   prompt.2    1.000000\n",
-       "                        sections_to_rename         prompt.1    0.723572\n",
-       "                                                   prompt.2    0.487808\n",
-       "EMBOR-2025-61250V2      missing_sections           prompt.1    0.000000\n",
-       "                                                   prompt.2    0.842415\n",
-       "                        sections_as_in_manuscript  prompt.1    0.000000\n",
-       "                                                   prompt.2    1.000000\n",
-       "                        sections_to_move           prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_remove         prompt.1    0.000000\n",
-       "                                                   prompt.2    1.000000\n",
-       "                        sections_to_rename         prompt.1    0.000000\n",
-       "                                                   prompt.2    0.254791\n",
-       "EMM-2025-21341          missing_sections           prompt.1    1.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_as_in_manuscript  prompt.1    1.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_move           prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_remove         prompt.1    1.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_rename         prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "EMM-2025-21532          missing_sections           prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_as_in_manuscript  prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_move           prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_remove         prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "                        sections_to_rename         prompt.1    0.000000\n",
-       "                                                   prompt.2    0.000000\n",
-       "Name: score, dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[\n",
-    "    (df['aggregation_level'] == 0) & \n",
-    "    (df['field'] != '') &\n",
-    "    (df['metric'] == 'semantic_similarity')\n",
-    "].groupby(['item_id', 'field', 'prompt'])['score'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-22 12:28:49 - INFO - len df: 104\n",
-      "2025-07-22 12:28:49 - INFO - len item_data: 25\n",
-      "2025-07-22 12:28:49 - INFO - Creating plot (prompt.1, semantic_similarity), plotting score for section-order...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-22 12:28:49 - INFO - Plotting data: 25 rows\n",
-      "2025-07-22 12:28:49 - INFO - Item IDs: ['10.1038_embor.2009.217' 'EMBOJ-2024-119734R' 'EMBOR-2025-61250V2'\n",
-      " 'EMM-2025-21341' 'EMM-2025-21532']\n",
-      "2025-07-22 12:28:49 - INFO - Fields: ['sections_as_in_manuscript' 'missing_sections' 'sections_to_remove'\n",
-      " 'sections_to_rename' 'sections_to_move']\n",
-      "2025-07-22 12:28:49 - INFO - len df: 104\n",
-      "2025-07-22 12:28:49 - INFO - len item_data: 25\n",
-      "2025-07-22 12:28:49 - INFO - Creating plot (prompt.2, semantic_similarity), plotting score for section-order...\n",
-      "2025-07-22 12:28:49 - INFO - Plotting data: 25 rows\n",
-      "2025-07-22 12:28:49 - INFO - Item IDs: ['10.1038_embor.2009.217' 'EMBOJ-2024-119734R' 'EMBOR-2025-61250V2'\n",
-      " 'EMM-2025-21341' 'EMM-2025-21532']\n",
-      "2025-07-22 12:28:49 - INFO - Fields: ['sections_as_in_manuscript' 'missing_sections' 'sections_to_remove'\n",
-      " 'sections_to_rename' 'sections_to_move']\n"
+      "2025-07-22 16:37:09 - INFO - Creating plot (prompt.1, semantic_similarity), plotting score for section-order...\n",
+      "2025-07-22 16:37:09 - INFO - Plotting data: 25 rows\n",
+      "2025-07-22 16:37:09 - INFO - Creating plot (prompt.2, semantic_similarity), plotting score for section-order...\n",
+      "2025-07-22 16:37:09 - INFO - Plotting data: 25 rows\n"
      ]
     },
     {
@@ -1146,6 +1045,33 @@
        },
        "data": [
         {
+         "hovertext": [
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21532",
+          "EMM-2025-21532",
+          "EMM-2025-21532",
+          "EMM-2025-21532",
+          "EMM-2025-21532"
+         ],
          "marker": {
           "color": "white",
           "line": {
@@ -1153,22 +1079,110 @@
            "width": 0
           },
           "opacity": 0.4,
-          "size": 3
+          "size": 5
          },
          "mode": "markers",
          "name": "prompt.1",
          "showlegend": true,
          "type": "scatter",
-         "x": {
-          "bdata": "NUns8bZ2yr8eaPu89YPrP2JusMMXrv0/4xP056keB0Cy5LuCccwOQA==",
-          "dtype": "f8"
-         },
+         "x": [
+          -0.17509690617213988,
+          0.793471289481352,
+          1.790071231883131,
+          2.8003770285687266,
+          3.775993693315577,
+          -0.1352034402411066,
+          0.8958146426234532,
+          1.8007362411031944,
+          2.847088532286478,
+          3.7733075862693948,
+          -0.13400765535947423,
+          0.7939902041499423,
+          1.8735626600389588,
+          2.823377818855179,
+          3.8276648892190255,
+          -0.20393510679414265,
+          0.895323752413209,
+          1.8287986942509151,
+          2.858703317055294,
+          3.8207537451543203,
+          -0.1492326041268621,
+          0.8478711117333512,
+          1.8086459930513705,
+          2.807621225904064,
+          3.8156744362993575
+         ],
          "y": {
           "bdata": "AAAAAAAA8D8AAAAAAADoPwAAAAAAAPA/q6qqqn1OwD8AAAAAAAAAAAAAAAAAAPA/AAAAQKm+7T8AAAAAAADwPwAAAHh/J+c/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8D8AAAAAAADwPwAAAAAAAPA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=",
           "dtype": "f8"
          }
         },
         {
+         "error_y": {
+          "array": {
+           "bdata": "2BCoUS7Z3z9yhPh08YbhPwAAAAAAAAAAcoT4dPGG4T/MQxfaThzUPw==",
+           "dtype": "f8"
+          },
+          "color": "grey",
+          "thickness": 1,
+          "type": "data",
+          "visible": true,
+          "width": 3
+         },
+         "hovertext": [
+          "Field: missing_sections<br>0.5359048128128052: 0.536<br>Prompt: prompt.1",
+          "Field: sections_as_in_manuscript<br>0.6: 0.600<br>Prompt: prompt.1",
+          "Field: sections_to_move<br>0.0: 0.000<br>Prompt: prompt.1",
+          "Field: sections_to_remove<br>0.6: 0.600<br>Prompt: prompt.1",
+          "Field: sections_to_rename<br>0.17019337515036265: 0.170<br>Prompt: prompt.1"
+         ],
+         "marker": {
+          "color": "rgb(228,26,28)"
+         },
+         "name": "prompt.1",
+         "showlegend": true,
+         "type": "bar",
+         "width": 0.3333333333333333,
+         "x": [
+          0.8333333333333334,
+          -0.16666666666666666,
+          3.8333333333333335,
+          1.8333333333333333,
+          2.8333333333333335
+         ],
+         "y": {
+          "bdata": "mpmZ2SEm4T8zMzMzMzPjPwAAAAAAAAAAMzMzMzMz4z8iIiKC5cjFPw==",
+          "dtype": "f8"
+         }
+        },
+        {
+         "hovertext": [
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "10.1038_embor.2009.217",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOJ-2024-119734R",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMBOR-2025-61250V2",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21341",
+          "EMM-2025-21532",
+          "EMM-2025-21532",
+          "EMM-2025-21532",
+          "EMM-2025-21532",
+          "EMM-2025-21532"
+         ],
          "marker": {
           "color": "white",
           "line": {
@@ -1176,18 +1190,79 @@
            "width": 0
           },
           "opacity": 0.4,
-          "size": 3
+          "size": 5
          },
          "mode": "markers",
          "name": "prompt.2",
          "showlegend": true,
          "type": "scatter",
-         "x": {
-          "bdata": "GPdwK/9RvD+uqQM/GKLyP7FbkpzbCwFA0eu9KePPCEBV0Unobb0QQA==",
-          "dtype": "f8"
-         },
+         "x": [
+          0.18346459755623568,
+          1.1789997628679314,
+          2.2271888349478113,
+          3.2164263060411717,
+          4.178971062590825,
+          0.15468450284891308,
+          1.122703966333182,
+          2.168159261358373,
+          3.2278987889308723,
+          4.168066868784408,
+          0.16541130549925998,
+          1.1749469284541483,
+          2.152766056202733,
+          3.119071457134656,
+          4.137538140042172,
+          0.20949428335035597,
+          1.1853620568264325,
+          2.258928441289159,
+          3.1968823198485903,
+          4.132981430236686,
+          0.1904667317380343,
+          1.1638349892132387,
+          2.1652286546995194,
+          3.2116521372714733,
+          4.188988246096267
+         ],
          "y": {
           "bdata": "AAAAAAAA8D8AAAAAAADoPwAAAAAAAPA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPA/AAAAAFMe5D8AAAAAAADwPwAAALBAON8/AAAAAAAAAAAAAAAAAADwPwAAAAAQ9eo/AAAAAAAA8D+rqqqqfU7QPwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=",
+          "dtype": "f8"
+         }
+        },
+        {
+         "error_y": {
+          "array": {
+           "bdata": "sL7Y/A1n2j9yhPh08YbhPwAAAAAAAAAAcoT4dPGG4T9XqJ72BxbMPw==",
+           "dtype": "f8"
+          },
+          "color": "grey",
+          "thickness": 1,
+          "type": "data",
+          "visible": true,
+          "width": 3
+         },
+         "hovertext": [
+          "Field: missing_sections<br>0.44422330856323244: 0.444<br>Prompt: prompt.2",
+          "Field: sections_as_in_manuscript<br>0.6: 0.600<br>Prompt: prompt.2",
+          "Field: sections_to_move<br>0.0: 0.000<br>Prompt: prompt.2",
+          "Field: sections_to_remove<br>0.6: 0.600<br>Prompt: prompt.2",
+          "Field: sections_to_rename<br>0.14851981898148855: 0.149<br>Prompt: prompt.2"
+         ],
+         "marker": {
+          "color": "rgb(55,126,184)"
+         },
+         "name": "prompt.2",
+         "showlegend": true,
+         "type": "bar",
+         "width": 0.3333333333333333,
+         "x": [
+          1.1666666666666667,
+          0.16666666666666666,
+          4.166666666666667,
+          2.1666666666666665,
+          3.1666666666666665
+         ],
+         "y": {
+          "bdata": "mpmZmSdu3D8zMzMzMzPjPwAAAAAAAAAAMzMzMzMz4z+rqqqKsgLDPw==",
           "dtype": "f8"
          }
         }
@@ -1982,7 +2057,7 @@
          }
         },
         "title": {
-         "text": "score for section-order (n=fix this later)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with semantic similarity</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: gpt-4o-2024-08-06</span>"
+         "text": "score for section-order (n=5)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with semantic similarity</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: gpt-4o-2024-08-06</span>"
         },
         "width": 800,
         "xaxis": {
@@ -2035,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
