doc-checklist eval

--- a/notebooks/plots-doc-checklist.ipynb
+++ b/notebooks/plots-doc-checklist.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "Exception reporting mode: Verbose\n"
      ]
     }
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-31 21:23:36 - INFO - Creating global visualization for 2 checks\n",
-      "2025-07-31 21:23:36 - INFO - Creating plot for prompt: prompt.1...\n",
-      "2025-07-31 21:23:36 - INFO - Creating plot for prompt: prompt.2...\n"
+      "2025-08-01 22:43:15 - INFO - Creating global visualization for 2 checks\n",
+      "2025-08-01 22:43:15 - INFO - Creating plot for prompt: prompt.1...\n",
+      "2025-08-01 22:43:15 - INFO - Creating plot for prompt: prompt.2...\n"
      ]
     },
     {
@@ -65,8 +63,8 @@
         {
          "error_y": {
           "array": [
-           0.23176468170819003,
-           0.352965435631744
+           0.006457923631997007,
+           0.29016892935280253
           ],
           "color": "grey",
           "thickness": 1,
@@ -76,8 +74,8 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order-alt<br>Average Score: 0.830<br>Prompt: prompt.1<br>Num Points: 5",
-          "Check: section-order<br>Average Score: 0.381<br>Prompt: prompt.1<br>Num Points: 5"
+          "Check: section-order-alt<br>Average Score: 0.985<br>Prompt: prompt.1<br>Num Points: 5",
+          "Check: section-order<br>Average Score: 0.449<br>Prompt: prompt.1<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -91,8 +89,8 @@
           0.8333333333333334
          ],
          "y": [
-          0.8301847526553647,
-          0.38121963759263355
+          0.9851276165610685,
+          0.4486474070946375
          ]
         },
         {
@@ -122,26 +120,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          -0.15825115714738502,
-          -0.17110037944593234,
-          -0.18279284440589358,
-          -0.0959466205492998,
-          -0.12905418702537755,
-          0.8628560397584607,
-          0.8472655292792406,
-          0.8141960857953934,
-          0.8061193988790136,
-          0.885238114366433
+          -0.17618547206625979,
+          -0.21241747025339597,
+          -0.13494734588151566,
+          -0.15754195929337297,
+          -0.16120827785153424,
+          0.8792031478862008,
+          0.7510453850004772,
+          0.8924070008644867,
+          0.8880912341377319,
+          0.7722382552287901
          ],
          "y": {
-          "bdata": "qqqq8uI96D9WVVUlTrXvP6qqqhxC6e8/btu2FY0T3T8uuuhSJG7uP1ZVVRVTauI/AAAAWDth5z8AAAAAAAAAADMzMzMzM+M/AAAAAAAAAAA=",
+          "bdata": "SZIkCa6D7z+qqqpyCKXvPwAAAL44zu8/2ImdsBhU7z900UXXy1PvP5qZmZmZmeE/u7u7K9ms2j8AAACA8n3eP5qZmZmZmek/AAAAAAAAAAA=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": [
-           0.08672944216716465
+           0.08108940746488141
           ],
           "color": "grey",
           "thickness": 1,
@@ -151,7 +149,7 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order<br>Average Score: 0.547<br>Prompt: prompt.2<br>Num Points: 5"
+          "Check: section-order<br>Average Score: 0.608<br>Prompt: prompt.2<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(55,126,184)"
@@ -164,7 +162,7 @@
           1.1666666666666667
          ],
          "y": [
-          0.5474003201118022
+          0.6083719193032293
          ]
         },
         {
@@ -189,14 +187,14 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          1.1784807938855066,
-          1.177342769521917,
-          1.1531370927067395,
-          1.1298185944260792,
-          1.1639671442581687
+          1.166145214390227,
+          1.1309309558482497,
+          1.2004574572806004,
+          1.1791927585282902,
+          1.2177867062817036
          ],
          "y": {
-          "bdata": "mpmZM6Se4j+amZkRF/LjP6qqqip20uM/XY/C9YmO2z/WvmHtG9bePw==",
+          "bdata": "ERERkQw74z9mZmYe9d7lP2ZmZhannuU/MzMzMzMz4z/WvmHtG9bePw==",
           "dtype": "f8"
          }
         }
@@ -1044,15 +1042,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-31 21:37:26 - INFO - Creating plot (prompt.1, semantic_similarity), plotting score for section-order-alt...\n",
-      "2025-07-31 21:37:26 - INFO - Plotting data: 10 rows\n"
+      "2025-08-01 22:43:24 - INFO - Creating plot (prompt.1, semantic_similarity), plotting score for section-order-alt...\n",
+      "2025-08-01 22:43:24 - INFO - Plotting data: 10 rows\n"
      ]
     },
     {
@@ -1089,26 +1087,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          0.034724819733089295,
-          1.0178554761372869,
-          -0.0025972038274770194,
-          1.0222432019946577,
-          -0.06385712502809668,
-          0.9952529700284937,
-          0.06534247167848208,
-          1.061809004697805,
-          0.0284684316916766,
-          0.9616812668286245
+          0.03290113776281615,
+          1.0354733684563635,
+          0.025646076279044996,
+          1.0562882322997875,
+          -0.00802970364957361,
+          0.9919014499276183,
+          -0.025020960840141146,
+          0.947301085414694,
+          -0.07419829661513164,
+          0.9866699861148107
          ],
          "y": {
-          "bdata": "AAAAkHAm6z9VVVVVVVXlP6uqqkqcau8/AAAAAAAA8D9VVVU5hNLvPwAAAAAAAPA/btu2FY0T7T8AAAAAAAAAAF100aVI3Ow/AAAAAAAA8D8=",
+          "bdata": "kiRJElwH7z8AAAAAAADwP1VVVeUQSu8/AAAAAAAA8D8AAAB8cZzvPwAAAAAAAPA/sRM7YTGo7j8AAAAAAADwP+mii66Xp+4/AAAAAAAA8D8=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": {
-           "bdata": "I21wHbXQ2z9lwyTcYwavPw==",
+           "bdata": "AAAAAAAAAACuuMqsn3OKPw==",
            "dtype": "f8"
           },
           "color": "grey",
@@ -1118,8 +1116,8 @@
           "width": 3
          },
          "hovertext": [
-          "Field: missing_sections<br>0.7333333333333333: 0.733<br>Prompt: prompt.1",
-          "Field: sections_as_in_manuscript<br>0.9270361719773961: 0.927<br>Prompt: prompt.1"
+          "Field: missing_sections<br>1.0: 1.000<br>Prompt: prompt.1",
+          "Field: sections_as_in_manuscript<br>0.9702552331221369: 0.970<br>Prompt: prompt.1"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -1133,7 +1131,7 @@
           0
          ],
          "y": {
-          "bdata": "d3d3d3d35z8oQxvDR6rtPw==",
+          "bdata": "AAAAAAAA8D+zCeGzVAzvPw==",
           "dtype": "f8"
          }
         }
@@ -1975,19 +1973,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.454</h3>\n",
+       "            <h3>Paper: EMM-2025-21532 - Element: EMM-2025-21532/match_0_0 with score 0.979</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.909</td><td>0.963</td></tr><tr><td>missing_sections</td><td>0.000</td><td>0.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.958</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.979</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.958</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.985</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.970</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
